--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -28,7 +28,7 @@
             android:id="@+id/overview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/brightBlue"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
@@ -92,13 +92,13 @@
 
         <ImageView
             android:id="@+id/imageVisibilityOldPass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:paddingStart="0dp"
             android:paddingTop="5dp"
-            android:paddingEnd="5dp"
+            android:paddingEnd="10dp"
             android:src="@drawable/ic_visibility_off"
-            android:tint="@color/brightBlue"
+            android:tint="@color/blackGrey"
             app:layout_constraintEnd_toEndOf="@id/editTextOldPassword"
             app:layout_constraintTop_toTopOf="@id/editTextOldPassword" />
 
@@ -135,13 +135,13 @@
 
         <ImageView
             android:id="@+id/imageVisibilityNewPass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:paddingStart="0dp"
             android:paddingTop="5dp"
-            android:paddingEnd="5dp"
+            android:paddingEnd="10dp"
             android:src="@drawable/ic_visibility_off"
-            android:tint="@color/brightBlue"
+            android:tint="@color/blackGrey"
             app:layout_constraintEnd_toEndOf="@id/editTextNewPassword"
             app:layout_constraintTop_toTopOf="@id/editTextNewPassword" />
 
@@ -178,13 +178,13 @@
 
         <ImageView
             android:id="@+id/imageVisibilityConfirmPass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:paddingStart="0dp"
             android:paddingTop="5dp"
-            android:paddingEnd="5dp"
+            android:paddingEnd="10dp"
             android:src="@drawable/ic_visibility_off"
-            android:tint="@color/brightBlue"
+            android:tint="@color/blackGrey"
             app:layout_constraintEnd_toEndOf="@id/editTextConfirmPassword"
             app:layout_constraintTop_toTopOf="@id/editTextConfirmPassword" />
 
