--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,160 +4,143 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/blackTwo"
     tools:context=".activity.ForgotPasswordActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <LinearLayout
+
+        <ImageView
+            android:id="@+id/imageBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="50dp"
-            android:orientation="vertical"
-            android:gravity="center"
-            app:layout_constraintBottom_toTopOf="@+id/header"
-            app:layout_constraintEnd_toEndOf="parent">
+            android:paddingStart="20dp"
+            android:paddingTop="20dp"
+            android:src="@drawable/ic_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/labelAction"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:textSize="12sp"
-                android:text="@string/already_account"
-                android:fontFamily="@font/avenir_roman" />
-
-            <Button
-                android:id="@+id/buttonLoginFP"
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                android:textAllCaps="false"
-                android:fontFamily="@font/avenir_roman"
-                android:text="@string/label_login"
-                android:background="@drawable/button_up" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="60dp"
-            android:textSize="20sp"
-            android:textColor="@color/white"
-            android:fontFamily="@font/gotham_bold"
-            android:textAllCaps="true"
-            android:text="@string/label_forgot_pass"
-            app:layout_constraintBottom_toTopOf="@+id/layout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <LinearLayout
-            android:id="@+id/layout"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="80dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="8dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:padding="40dp"
+            app:layout_constraintTop_toBottomOf="@id/imageBack">
 
             <TextView
-                android:id="@+id/labelEmail"
-                android:layout_width="match_parent"
+                android:id="@+id/label_h1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:textColor="@color/textHint"
-                android:fontFamily="@font/avenir_roman"
-                android:text="@string/label_email" />
-
-            <EditText
-                android:id="@+id/editTextEmailFP"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:textSize="16sp"
-                android:fontFamily="@font/avenir_roman"
-                android:background="@drawable/line_edit_text"
-                android:inputType="textEmailAddress"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white" />
-
-
-            <TextView
-                android:id="@+id/labelCaptcha"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/white"
-                android:text="Please Enter Captcha"
-                android:fontFamily="@font/avenir_roman"
-                android:textSize="12sp"
-                android:gravity="center"/>
-            <ImageView
-                android:id="@+id/captchaFP"
-                android:layout_width="match_parent"
-                android:layout_height="80sp"
-                android:gravity="center"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/ic_fingerprint"/>
-            <EditText
-                android:id="@+id/editTextCaptchaFP"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:textSize="12sp"
-                android:fontFamily="@font/avenir_roman"
-                android:background="@drawable/line_edit_text"
-                android:inputType="text"
-                android:textColorHint="@color/greyWhite"
-                android:hint="Enter captcha here"
-                android:layout_marginTop="8dp"
-                android:textAlignment="center"
-                android:layout_gravity="center"
-                android:textColor="@color/white" />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/layoutRefresh"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <Button
-                    android:id="@+id/buttonRefreshCaptchaFP"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/refresh_captcha"
-                    android:textAllCaps="false"
-                    android:textColor="@color/white"
-                    android:textSize="12sp"
-                    android:background="@drawable/button_up"
-                    android:paddingStart="15sp"
-                    android:paddingEnd="15sp"
-                    android:layout_marginTop="10sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <Button
-                android:id="@+id/buttonResetFP"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:textSize="18sp"
-                android:text="@string/label_reset"
                 android:fontFamily="@font/gotham_bold"
                 android:textColor="@color/white"
-                android:background="@drawable/button_radius" />
+                android:text="@string/label_forgot_pass"
+                android:textSize="28sp"
+                app:layout_constraintStart_toStartOf="@id/layout_content"
+                app:layout_constraintTop_toTopOf="@id/layout_content" />
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/label_h2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/avenir_roman"
+                android:text="Enter the email address associated with your account"
+                android:textColor="@color/greyishBrown"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/label_h1" />
 
+            <LinearLayout
+                android:id="@+id/layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@id/label_h2">
+
+                <EditText
+                    android:id="@+id/editTextEmailFP"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edit_text_rounded_white"
+                    android:ems="10"
+                    android:fontFamily="@font/avenir_roman"
+                    android:hint="Enter email"
+                    android:inputType="textEmailAddress"
+                    android:padding="15dp"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/greyishBrown"
+                    android:textSize="14sp" />
+
+                <ImageView
+                    android:id="@+id/captchaFP"
+                    android:layout_width="match_parent"
+                    android:layout_height="80sp"
+                    android:layout_marginTop="30dp"
+                    android:gravity="center"
+                    android:src="@drawable/ic_fingerprint" />
+
+                <EditText
+                    android:id="@+id/editTextCaptchaFP"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/line_edit_text"
+                    android:ems="10"
+                    android:fontFamily="@font/avenir_roman"
+                    android:hint="Enter captcha here"
+                    android:inputType="text"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/greyWhite"
+                    android:textSize="12sp" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/layoutRefresh"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/edit_text_rounded_white"
+                    android:padding="10dp">
+
+                    <ImageView
+                        android:id="@+id/img_refresh"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_sync"
+                        app:layout_constraintStart_toStartOf="@id/layoutRefresh"
+                        app:layout_constraintTop_toTopOf="@id/layoutRefresh" />
+
+                    <TextView
+                        android:id="@+id/buttonRefreshCaptchaFP"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/refresh_captcha"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white"
+                        android:textSize="12sp"
+                        app:layout_constraintBottom_toBottomOf="@id/img_refresh"
+                        app:layout_constraintStart_toEndOf="@id/img_refresh"
+                        app:layout_constraintTop_toTopOf="@id/img_refresh" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <Button
+                    android:id="@+id/buttonResetFP"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:background="@drawable/button_blue_dark"
+                    android:fontFamily="@font/gotham_bold"
+                    android:text="@string/label_reset"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
