--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,146 +4,101 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/blackTwo"
     tools:context=".activity.SignUpActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="50dp"
-            android:orientation="vertical"
-            android:gravity="center"
-            app:layout_constraintBottom_toTopOf="@+id/header"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <TextView
-                android:id="@+id/labelAction"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:textSize="12sp"
-                android:text="@string/already_account"
-                android:fontFamily="@font/avenir_roman" />
-
-            <Button
-                android:id="@+id/buttonLoginSG"
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                android:textAllCaps="false"
-                android:fontFamily="@font/avenir_roman"
-                android:text="@string/label_login"
-                android:background="@drawable/button_up" />
-        </LinearLayout>
+        android:layout_height="wrap_content"
+        android:padding="40dp">
 
         <TextView
-            android:id="@+id/header"
+            android:id="@+id/label_h1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="60dp"
-            android:textSize="35sp"
-            android:textColor="@color/white"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/gotham_bold"
-            android:textAllCaps="true"
-            android:text="@string/header"
-            app:layout_constraintBottom_toTopOf="@+id/layout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:text="Create Account,"
+            android:textColor="@color/white"
+            android:textSize="28sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/label_h2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/avenir_roman"
+            android:text="Sign up to get started!"
+            android:textColor="@color/greyishBrown"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/label_h1" />
 
         <LinearLayout
             android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="80dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="8dp"
             android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@id/label_h2">
 
-            <TextView
-                android:id="@+id/labelEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:textColor="@color/textHint"
-                android:fontFamily="@font/avenir_roman"
-                android:text="@string/label_email" />
 
             <EditText
                 android:id="@+id/editTextEmailSG"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:textSize="16sp"
+                android:background="@drawable/edit_text_rounded_white"
+                android:hint="Enter email"
+                android:padding="15dp"
                 android:fontFamily="@font/avenir_roman"
-                android:background="@drawable/line_edit_text"
+                android:textColorHint="@color/greyishBrown"
                 android:inputType="textEmailAddress"
-                android:textColorHint="@color/white"
+                android:textSize="14sp"
                 android:textColor="@color/white" />
-
-            <TextView
-                android:id="@+id/labelPass"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:textSize="12sp"
-                android:textColor="@color/textHint"
-                android:fontFamily="@font/avenir_roman"
-                android:text="@string/label_password" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp">
+
                 <EditText
                     android:id="@+id/editTextPassSG"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:textSize="16sp"
+                    android:background="@drawable/edit_text_rounded_white"
+                    android:hint="Enter password"
                     android:fontFamily="@font/avenir_roman"
-                    android:background="@drawable/line_edit_text"
+                    android:padding="15dp"
                     android:inputType="textPassword"
-                    android:textColorHint="@color/white"
+                    android:textColorHint="@color/greyishBrown"
+                    android:textSize="14sp"
                     android:textColor="@color/white"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <ImageView
                     android:id="@+id/imageVisibilityPassSG"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:src="@drawable/ic_visibility_off"
-                    android:tint="@color/white"
-                    android:paddingBottom="5sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    android:paddingEnd="10dp"
+                    android:tint="@color/greyishBrown"
+                    app:layout_constraintBottom_toBottomOf="@id/editTextPassSG"
+                    app:layout_constraintEnd_toEndOf="@id/editTextPassSG"
+                    app:layout_constraintTop_toTopOf="@id/editTextPassSG" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
-                android:id="@+id/labelCaptcha"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/white"
-                android:text="Please Enter Captcha"
-                android:fontFamily="@font/avenir_roman"
-                android:textSize="12sp"
-                android:gravity="center"/>
             <ImageView
                 android:id="@+id/captcha"
                 android:layout_width="match_parent"
                 android:layout_height="80sp"
                 android:gravity="center"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/ic_fingerprint"/>
+                android:layout_marginTop="30dp"
+                android:src="@drawable/ic_fingerprint" />
+
             <EditText
                 android:id="@+id/editTextCaptcha"
                 android:layout_width="150dp"
@@ -153,7 +108,7 @@
                 android:fontFamily="@font/avenir_roman"
                 android:background="@drawable/line_edit_text"
                 android:inputType="text"
-                android:textColorHint="@color/greyWhite"
+                android:textColorHint="@color/greyishBrown"
                 android:hint="Enter captcha here"
                 android:layout_marginTop="8dp"
                 android:textAlignment="center"
@@ -162,9 +117,22 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layoutRefresh"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/edit_text_rounded_white"
+                android:padding="10dp">
+
+                <ImageView
+                    android:id="@+id/img_refresh"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_sync"
+                    app:layout_constraintStart_toStartOf="@id/layoutRefresh"
+                    app:layout_constraintTop_toTopOf="@id/layoutRefresh" />
+
+                <TextView
                     android:id="@+id/buttonRefreshCaptcha"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -172,27 +140,49 @@
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:textSize="12sp"
-                    android:background="@drawable/button_up"
-                    android:paddingStart="15sp"
-                    android:paddingEnd="15sp"
-                    android:layout_marginTop="10sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintBottom_toBottomOf="@id/img_refresh"
+                    app:layout_constraintStart_toEndOf="@id/img_refresh"
+                    app:layout_constraintTop_toTopOf="@id/img_refresh" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <Button
                 android:id="@+id/buttonSignUpSG"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="40dp"
                 android:textSize="18sp"
                 android:text="@string/label_sign_up"
                 android:fontFamily="@font/gotham_bold"
                 android:textColor="@color/white"
-                android:background="@drawable/button_radius" />
+                android:background="@drawable/button_blue_dark" />
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/label_signIn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/avenir_roman"
+            android:text="I'm already a member,"
+            android:textColor="@color/greyishBrown"
+            android:textSize="13sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/layout" />
+
+        <TextView
+            android:id="@+id/btn_signIn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/gotham_bold"
+            android:text="Sign In"
+            android:textColor="@color/white"
+            android:textSize="13sp"
+            app:layout_constraintStart_toEndOf="@id/label_signIn"
+            app:layout_constraintTop_toBottomOf="@id/layout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
