--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,5 +30,6 @@
     <color name="chocolate">#8f7565</color>
     <color name="chocolate2">#80695a</color>
     <color name="black_transparent">#33000000</color>
+    <color name="snackBar">#0966CC</color>
 
 </resources>
