--- a/app/src/main/res/layout/dialog_loader.xml
+++ b/app/src/main/res/layout/dialog_loader.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/img_loadig"
+        android:id="@+id/animate_loading"
         android:layout_width="150dp"
         android:layout_height="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -14,6 +14,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:lottie_rawRes="@raw/loading" />
+        app:lottie_rawRes="@raw/loading_among_us" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
