--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:fontFamily="@font/gotham_bold"
-            android:text="No Data Found"
+            android:text="No Transaction"
             android:textColor="@color/transacRed"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
